# aws_lambda_rust_http_server

./: Cargo.toml  build.sh
src/: main.rs
