[package]
name = "aws_lambda_rust_http_server"
version = "0.1.0"
edition = "2018"
autobins = false

[dependencies]
tokio = { version = "1.0", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
maud = "*"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
